# dragonquest3clone

./: .gitignore  .gitmodules  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  LICENSE  README.md  build.py  build.sh  cmake_install.cmake  compile_commands.json  copy-assets.cmake  package-lock.json
include/DragonQuest3Clone/: application.h  engine.h  engine.hpp  entities.hpp  game.hpp  game_constant.hpp  renderer.hpp  utilities.hpp  window.hpp
include/DragonQuest3Clone/Application/: entity.h  player.h  utility.h
include/DragonQuest3Clone/Engine/: constants.h  input.h  key.h  log.h  resource.h  window.h
include/DragonQuest3Clone/Renderer/: engine.hpp  window.hpp  window_config.hpp
include/DragonQuest3Clone/Utilities/: Constant.hpp  InputData.hpp  SceneComposer.hpp
libs/: CMakeLists.txt
libs/SDL/.github/actions/setup-msvc-libusb-action/: action.yml
libs/SDL/cmake/: sdlcpu.cmake
src/: CMakeLists.txt  engine.cpp  game.cpp  game.hpp  human.cpp  input_data.cpp  main.cpp  player.cpp  render_engine.cpp  render_engine.hpp  scene_composer.cpp  todo.md  window.cpp
src/application/: CMakeLists.txt  application.cpp  player.cpp  vector.cpp
src/engine/: CMakeLists.txt  input.cpp  log.cpp  resource.cpp  window.cpp
tests/: CMakeLists.txt  input_manager_test.cpp
